--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 <div class="ritz grid-container" dir="ltr">
     <table class="waffle" cellspacing="0" cellpadding="0">
         <tbody>
-            <tr style="height: 35px;">
+            <tr style="height: 35px; width: 100%;">
                 <th id="0R0" style="height: 35px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 35px;"><br></div>
                 </th>
