--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link type="text/css" rel="stylesheet" href="resources/sheet.css">
 </p>
 <style type="text/css">
+    table.tb { width:300px; border-collapse: collapse; }
+    
     .ritz .waffle a {
         color: inherit;
     }
