--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <link type="text/css" rel="stylesheet" href="resources/sheet.css">
 </p>
 <style type="text/css">
-    table.tb { width:300px; border-collapse: collapse; }
-    
     .ritz .waffle a {
         color: inherit;
     }
@@ -424,8 +422,8 @@
     }
 </style>
 <div class="ritz grid-container" dir="ltr">
-    <table class="waffle" cellspacing="0" cellpadding="0">
-        <tbody style="width: 100%;">
+    <table class="waffle" cellspacing="0" cellpadding="0" style="width:100%">
+        <tbody>
             <tr style="height: 35px;">
                 <th id="0R0" style="height: 35px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 35px;"><br></div>
