--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 </style>
 <div class="ritz grid-container" dir="ltr">
     <table class="waffle" cellspacing="0" cellpadding="0" style="width:100%">
-        <tbody>
+        <tbody style="background-color:#000820;">
             <tr style="height: 35px;">
                 <th id="0R0" style="height: 35px;" class="row-headers-background">
                     <div class="row-header-wrapper" style="line-height: 35px;"><br></div>
