--- a/index.html
+++ b/index.html
@@ -420,9 +420,14 @@
         direction: ltr;
         padding: 2px 3px 2px 3px;
     }
+
+    .body {
+        margin:0px;
+        background-color:#000820
+    }
 </style>
 <div class="ritz grid-container" dir="ltr">
-    <table class="waffle" cellspacing="0" cellpadding="0" style="width:100%">
+    <table class="waffle" cellspacing="5" cellpadding="5" style="width:100%">
         <tbody style="background-color:#000820;">
             <tr style="height: 35px;">
                 <th id="0R0" style="height: 35px;" class="row-headers-background">
