--- a/index.html
+++ b/index.html
@@ -463,7 +463,14 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr">AbilityUnlock_Captain</td>
+                  <td class="s12" dir="ltr">AbilityUnlock_Captain
+                    <select name="cars" id="cars">
+                      <option value="volvo">Volvo</option>
+                      <option value="saab">Saab</option>
+                      <option value="mercedes">Mercedes</option>
+                      <option value="audi">Audi</option>
+                    </select>
+                  </td>
                   <td class="s9" dir="ltr">Runs a conversation with an NPC</td>
               </tr>
               <tr style="height: 20px;">
