--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color:#203080">
+<body style="background-color:#3b4563">
   <p>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <link type="text/css" rel="stylesheet" href="resources/sheet.css">
@@ -424,7 +424,7 @@
   </style>
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
-          <tbody style="background-color:#203080;">
+          <tbody style="background-color:#3b4563;">
               <tr style="height: 35px;">
                   <th id="0R0" style="height: 35px;" class="row-headers-background">
                       <div class="row-header-wrapper" style="line-height: 35px;"><br></div>
@@ -463,7 +463,7 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><select disabled="true">
+                  <td class="s12" dir="ltr"><select name="Items" style="background-opacity:0">
                     <option>Active_Boost</option>
                     <option>Active_Grapple</option>
                     <option>Active_Heal</option>
