--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><label for="Items">Items</label><select name="Items" style="background-color:#a96086">
+                  <td class="s12" dir="ltr"><select style="background-color:#a96086">Items
                     <option disabled="true">Active_Boost</option>
                     <option disabled="true">Active_Grapple</option>
                     <option disabled="true">Active_Heal</option>
