--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><select style="background-color:#a96086">Items
+                  <td class="s12" dir="ltr"><select style="background-color:#a96086; text-color:#000000">
+                    <option disabled="true" selected="true">Items</option>
                     <option disabled="true">Active_Boost</option>
                     <option disabled="true">Active_Grapple</option>
                     <option disabled="true">Active_Heal</option>
