--- a/index.html
+++ b/index.html
@@ -464,16 +464,16 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr"><select style="background-color:#a96086; color:#000000">
-                    <option disabled="true" selected="true" style="color:#000000">Items</option>
-                    <option disabled="true" style="color:#000000">Active_Boost</option>
-                    <option disabled="true" style="color:#000000">Active_Grapple</option>
-                    <option disabled="true" style="color:#000000">Active_Heal</option>
-                    <option disabled="true" style="color:#000000">Active_Jump</option>
-                    <option disabled="true" style="color:#000000">Active_Redirection</option>
-                    <option disabled="true" style="color:#000000">Active_Shield</option>
-                    <option disabled="true" style="color:#000000">Active_Slomo</option>
-                    <option disabled="true" style="color:#000000">Active_SparkDash</option>
-                    <option disabled="true" style="color:#000000">Active_TradeHpForBoost</option>
+                    <option disabled="true" selected="true" style="text-color:#000000">Items</option>
+                    <option disabled="true" style="text-color:#000000">Active_Boost</option>
+                    <option disabled="true" style="text-color:#000000">Active_Grapple</option>
+                    <option disabled="true" style="text-color:#000000">Active_Heal</option>
+                    <option disabled="true" style="text-color:#000000">Active_Jump</option>
+                    <option disabled="true" style="text-color:#000000">Active_Redirection</option>
+                    <option disabled="true" style="text-color:#000000">Active_Shield</option>
+                    <option disabled="true" style="text-color:#000000">Active_Slomo</option>
+                    <option disabled="true" style="text-color:#000000">Active_SparkDash</option>
+                    <option disabled="true" style="text-color:#000000">Active_TradeHpForBoost</option>
                     <option disabled="true">Active_TradeSpeedForHeal</option>
                     <option disabled="true">AutoPilot</option>
                     <option disabled="true">BecomeInvulnerableForAMomentOnPerfectLanding</option>
