--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
           padding: 2px 3px 2px 3px;
       }
 
+      .ritz .waffle .s12 .itemSelect {
+          background-color: #a96086;
+          color: #000000;
+      }
+
       .ritz .waffle .s15 {
           background-color: #a4c2f4;
           text-align: left;
@@ -463,17 +468,17 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><select style="background-color:#a96086; color:#000000">
-                    <option disabled="true" selected="true" style="text-color:#000000">Items</option>
-                    <option disabled="true" style="text-color:#000000">Active_Boost</option>
-                    <option disabled="true" style="text-color:#000000">Active_Grapple</option>
-                    <option disabled="true" style="text-color:#000000">Active_Heal</option>
-                    <option disabled="true" style="text-color:#000000">Active_Jump</option>
-                    <option disabled="true" style="text-color:#000000">Active_Redirection</option>
-                    <option disabled="true" style="text-color:#000000">Active_Shield</option>
-                    <option disabled="true" style="text-color:#000000">Active_Slomo</option>
-                    <option disabled="true" style="text-color:#000000">Active_SparkDash</option>
-                    <option disabled="true" style="text-color:#000000">Active_TradeHpForBoost</option>
+                  <td class="s12" dir="ltr"><select name="itemSelect">
+                    <option disabled="true" selected="true">Items</option>
+                    <option disabled="true">Active_Boost</option>
+                    <option disabled="true">Active_Grapple</option>
+                    <option disabled="true">Active_Heal</option>
+                    <option disabled="true">Active_Jump</option>
+                    <option disabled="true">Active_Redirection</option>
+                    <option disabled="true">Active_Shield</option>
+                    <option disabled="true">Active_Slomo</option>
+                    <option disabled="true">Active_SparkDash</option>
+                    <option disabled="true">Active_TradeHpForBoost</option>
                     <option disabled="true">Active_TradeSpeedForHeal</option>
                     <option disabled="true">AutoPilot</option>
                     <option disabled="true">BecomeInvulnerableForAMomentOnPerfectLanding</option>
