--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
           padding: 2px 3px 2px 3px;
       }
 
-      .ritz .waffle .s12 .itemSelect {
-          background-color: #a96086;
-          color: #000000;
-      }
-
       .ritz .waffle .s15 {
           background-color: #a4c2f4;
           text-align: left;
@@ -470,7 +465,7 @@
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr"><select name="itemSelect">
                     <option disabled="true" selected="true">Items</option>
-                    <option disabled="true">Active_Boost</option>
+                    <option disabled="true" style="color:#a96086">Active_Boost</option>
                     <option disabled="true">Active_Grapple</option>
                     <option disabled="true">Active_Heal</option>
                     <option disabled="true">Active_Jump</option>
