--- a/index.html
+++ b/index.html
@@ -463,14 +463,14 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><select name="itemSelect">
+                  <td class="s12" dir="ltr"><select style="background-color:#c27ba0>
                     <option disabled="true" selected="true">Items</option>
-                    <option disabled="true" style="color:#a96086">Active_Boost</option>
-                    <option disabled="true">Active_Grapple</option>
-                    <option disabled="true">Active_Heal</option>
-                    <option disabled="true">Active_Jump</option>
-                    <option disabled="true">Active_Redirection</option>
-                    <option disabled="true">Active_Shield</option>
+                    <option disabled="true" style="color:#000000">Active_Boost</option>
+                    <option disabled="true" style="color:#000000">Active_Grapple</option>
+                    <option disabled="true" style="color:#000000">Active_Heal</option>
+                    <option disabled="true" style="color:#000000">Active_Jump</option>
+                    <option disabled="true" style="color:#000000">Active_Redirection</option>
+                    <option disabled="true" style="color:#000000">Active_Shield</option>
                     <option disabled="true">Active_Slomo</option>
                     <option disabled="true">Active_SparkDash</option>
                     <option disabled="true">Active_TradeHpForBoost</option>
