--- a/index.html
+++ b/index.html
@@ -465,12 +465,12 @@
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr"><select style="background-color:#65324d">
                     <option disabled="true" selected="true">Items</option>
-                    <option disabled="true" style="color:#ffffff">Active_Boost</option>
-                    <option disabled="true" style="color:#ffffff">Active_Grapple</option>
-                    <option disabled="true" style="color:#ffffff">Active_Heal</option>
-                    <option disabled="true" style="color:#ffffff">Active_Jump</option>
-                    <option disabled="true" style="color:#ffffff">Active_Redirection</option>
-                    <option disabled="true" style="color:#ffffff">Active_Shield</option>
+                    <option disabled="true" style="color:#000000">Active_Boost</option>
+                    <option disabled="true" style="color:#000000">Active_Grapple</option>
+                    <option disabled="true" style="color:#000000">Active_Heal</option>
+                    <option disabled="true" style="color:#000000">Active_Jump</option>
+                    <option disabled="true" style="color:#000000">Active_Redirection</option>
+                    <option disabled="true" style="color:#000000">Active_Shield</option>
                     <option disabled="true">Active_Slomo</option>
                     <option disabled="true">Active_SparkDash</option>
                     <option disabled="true">Active_TradeHpForBoost</option>
