--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                   <td class="s6" dir="ltr">PlayInteraction</td>
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
-                  <td class="s12" dir="ltr"><select style="background-color:#65324d; display:none">
+                  <td class="s12" dir="ltr"><select style="background-color:#65324d; hover-color:#65324d">
                     <option disabled="true" selected="true">Items</option>
                     <option disabled="true" style="color:#000000">Active_Boost</option>
                     <option disabled="true" style="color:#000000">Active_Grapple</option>
