--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
-                    <div class="custom-select">
+                    <div class="custom-select" style="width:100%">
                       <select>
                         <option disabled="true" selected="true">Items</option>
                         <option disabled="true" style="color:#000000">Active_Boost</option>
