--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
 
       .ritz .waffle .s12 .custom-select {
-
+        position: relative;
       }
       
       .ritz .waffle .s12 .custom-select select {
