--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           color: inherit;
       }
 
-      .ritz .waffle .s12 {
+      /*.ritz .waffle .s12 {
           background-color: #c27ba0;
           text-align: left;
           color: #000000;
@@ -18,7 +18,7 @@
           white-space: nowrap;
           direction: ltr;
           padding: 2px 3px 2px 3px;
-      }
+      }*/
 
       .ritz .waffle .s12 .custom-select {
         position: relative;
