--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
                     <select>
-                      <button style="background-color:#65324d"></button>
+                      <button style="background-color:#65324d"><selected-content></selected-content></button>
                       <option disabled="true" selected="true">Items</option>
                       <option disabled="true">Active_Boost</option>
                       <option disabled="true">Active_Grapple</option>
