--- a/index.html
+++ b/index.html
@@ -464,8 +464,7 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
-                    <select>
-                      <button style="background-color:#65324d"><selected-content></selected-content></button>
+                    <select --disabled="background-color:#a26ba8; color:#000000">
                       <option disabled="true" selected="true">Items</option>
                       <option disabled="true">Active_Boost</option>
                       <option disabled="true">Active_Grapple</option>
