--- a/index.html
+++ b/index.html
@@ -421,6 +421,16 @@
           direction: ltr;
           padding: 2px 3px 2px 3px;
       }
+
+      .ritz .waffle .s12 .select {
+        background-color: #a26ba8;
+        color: #000000
+      }
+
+      .ritz .waffle .s12 .select--disabled {
+        background-color: #a26ba8;
+        color: #000000
+      }
   </style>
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
@@ -464,7 +474,7 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
-                    <select disabled="background-color:#a26ba8; color:#000000">
+                    <select>
                       <option disabled="true" selected="true">Items</option>
                       <option disabled="true">Active_Boost</option>
                       <option disabled="true">Active_Grapple</option>
