--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
           padding: 2px 3px 2px 3px;
       }
 
-      .ritz .waffle .s12 .select {
+      .ritz .waffle .s12 select {
         background-color: #a26ba8;
         color: #000000
       }
 
-      .ritz .waffle .s12 .select--disabled {
+      .ritz .waffle .s12 select--disabled {
         background-color: #a26ba8;
         color: #000000
       }
