--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select--disabled {
+      /*.ritz .waffle .s12 select--disabled {
         background-color: #a26ba8;
         color: #000000
-      }
+      }*/
   </style>
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
