--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select:disabled {
+      .ritz .waffle .s12 select option:disabled {
         background-color: #000000;
         color: #000000
       }
