--- a/index.html
+++ b/index.html
@@ -427,8 +427,9 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select option:disabled {
+      .ritz .waffle .s12 select option:disabled, .ritz .waffle .s12 select option[readonly] {
         background-color: #000000;
+        opacity:1;
         color: #000000
       }
   </style>
