--- a/index.html
+++ b/index.html
@@ -424,13 +424,13 @@
 
       .ritz .waffle .s12 select {
         background-color: #a26ba8;
-        color: #000000
+        color: #010101
       }
 
-      .ritz .waffle .s12 select option:disabled, .ritz .waffle .s12 select option[readonly] {
-        background-color: #000000;
-        opacity:1;
-        color: #000000
+      .ritz .waffle .s12 select option:disabled {
+        background-color: #a26ba8;
+        opacity: 1;
+        color: #010101
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
