--- a/index.html
+++ b/index.html
@@ -432,6 +432,10 @@
         opacity: 1;
         color: #000000
       }
+
+      .ritz .waffle .s12 select option::-webkit-scrollbar-thumb {
+        background-color: blue;
+      }
   </style>
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
