--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select option::scrollbar-thumb {
+      ::-webkit-scrollbar-thumb {
         background-color: blue;
       }
   </style>
