--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       }
 
       ::-webkit-scrollbar-thumb {
-        background-color: blue;
+        background: #0000ff;
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
