--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select::-webkit-scrollbar-thumb {
+      .ritz .waffle .s12 select:-webkit-scrollbar-track {
         background: #0000ff;
       }
   </style>
