--- a/index.html
+++ b/index.html
@@ -433,8 +433,13 @@
         color: #000000
       }
 
-      .ritz .waffle .s12 select:-webkit-scrollbar-track {
-        background: #0000ff;
+      .ritz .waffle .s12 select.widthHeight::-webkit-scrollbar {
+        width: absolute;
+        height: absolute;
+      }
+
+      .ritz .waffle .s12 select.style::-webkit-scrollbar-track {
+        background-color: #0000ff;
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
