--- a/index.html
+++ b/index.html
@@ -424,22 +424,15 @@
 
       .ritz .waffle .s12 select {
         background-color: #a26ba8;
-        color: #000001
+        color: #000001;
+        scrollbar-color: red blue;
+        scrollbar-width: thin;
       }
 
       .ritz .waffle .s12 select option:disabled {
         background-color: #a26ba8;
         opacity: 1;
-        color: #000000
-      }
-
-      .ritz .waffle .s12 select.widthHeight::-webkit-scrollbar {
-        width: absolute;
-        height: absolute;
-      }
-
-      .ritz .waffle .s12 select.style::-webkit-scrollbar-track {
-        background-color: #0000ff;
+        color: #000000;
       }
   </style>
   <div class="ritz grid-container" dir="ltr">
