--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                   <td class="s11" dir="ltr">interaction identifier</td>
                   <td class="s7"><br></td>
                   <td class="s12" dir="ltr">
-                    <select style="scrollbar-color: blue blue;">
+                    <select style="scrollbar-thumb-color: blue blue;">
                       <option disabled="true" selected="true">Items</option>
                       <option disabled="true">Active_Boost</option>
                       <option disabled="true">Active_Grapple</option>
